--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <!-- Bootstrap CSS -->
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
 
@@ -94,7 +94,7 @@
         <div class="container">
           <ul class="nav justify-content-between align-items-center">
             <li class="nav-item">
-              <a class="nav-link" href="">
+              <a class="nav__link" href="">
                 <img
                   class="nav__logo"
                   src="images/logo.svg"
@@ -104,7 +104,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="add-edit-post.html"
+              <a class="nav__link" href="add-edit-post.html"
                 ><i class="fas fa-plus-circle mr-1"></i>Add new post</a
               >
             </li>
@@ -114,6 +114,59 @@
     </header>
 
     <main>
+      <!-- carousel -->
+      <div
+        id="carouselExampleControls"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="https://picsum.photos/id/0/1378/400"
+              class="d-block w-100"
+              alt="laptop"
+            />
+          </div>
+
+          <div class="carousel-item">
+            <img
+              src="https://picsum.photos/id/10/1378/400"
+              class="d-block w-100"
+              alt="forest and sea"
+            />
+          </div>
+
+          <div class="carousel-item">
+            <img
+              src="https://picsum.photos/id/1080/1378/400"
+              class="d-block w-100"
+              alt="strawbery"
+            />
+          </div>
+        </div>
+
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleControls"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleControls"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
       <section class="posts-section">
         <div class="container">
           <h1 class="with-underline text-center">Latest posts</h1>
@@ -190,6 +243,13 @@
     <footer class="text-center text-muted py-3">
       <small>Created by Po with <i class="fas fa-heart"></i></small>
     </footer>
+
+    <!-- Boostrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Scripts should be placed here to prevent blocking render UI -->
     <script type="module" src="/js/main.js"></script>
